// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel listing Render Channel Page 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  direction: ltr;
  background: rgb(255,255,255);
  padding: 24px;
  padding-bottom: 0;
  border-bottom: 1px solid rgb(217,220,222);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: 'Rubik','Helvetica','Arial';
  font-weight: 400;
}

.emotion-4 header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  width: 100%;
  margin: 16px 0 32px 0;
  position: relative;
}

@media (max-width: 560px) {
  .emotion-4 header {
    margin: 16px 0 0 0;
  }
}

.emotion-5 {
  background: transparent;
  color: rgb(26,32,38);
  font-size: 0.75rem;
  list-style-type: none;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  padding: 0;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  font-family: 'Rubik','Helvetica','Arial';
  color: rgb(0,106,225);
}

.emotion-7 {
  height: 16px;
  width: 16px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0.125rem;
  margin-right: 0.125rem;
}

.emotion-7 svg {
  fill: rgb(105,113,122);
}

.emotion-8 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-9 {
  border: 2px solid transparent;
  transition-property: border-color,text-decoration;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  margin: 0.125rem;
  display: inline-block;
  box-sizing: border-box;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}

.emotion-9:focus-within {
  border: 2px solid #4494EF;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 a:focus {
  outline: 0;
}

.emotion-9>* {
  vertical-align: baseline!important;
}

.emotion-10 a,
.emotion-10 a:link,
.emotion-10 a:visited {
  color: rgb(0,106,225);
  text-decoration-line: none;
}

.emotion-10 a:hover {
  color: #004CD6;
  text-decoration-line: underline;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (max-width: 560px) {
  .emotion-11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
  }
}

.emotion-12 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

@media (max-width: 560px) {
  .emotion-12 {
    margin: 16px 0 32px 0;
  }
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-all;
}

.emotion-14 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  margin: 0;
}

@media (max-width: 1080px) {
  .emotion-15 {
    position: absolute;
    top: -33px;
    right: 0;
  }
}

.emotion-16 {
  direction: ltr;
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  max-height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-16>*,
.emotion-16>button {
  margin: 0.5rem;
}

.emotion-17 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-17:hover {
    background-color: #004CD6;
  }
}

.emotion-17:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-17 svg {
  fill: rgb(255,255,255);
}

.emotion-18 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <section
              class="emotion-4"
            >
              <nav>
                <ol
                  class="emotion-5"
                  dir="ltr"
                >
                  <li
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-8"
                        focusable="false"
                        role="img"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <svg
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4l6 6c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4L10.4 12z"
                            />
                          </svg>
                        </g>
                      </svg>
                    </span>
                    <div
                      class="emotion-9"
                      title="UT hub without channels"
                    >
                      <div
                        class="emotion-10"
                      >
                        <a
                          href="/eventsplus/hub-without-channels/information"
                        >
                          UT hub without channels
                        </a>
                      </div>
                    </div>
                  </li>
                </ol>
              </nav>
              <header>
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <section
                      class="emotion-13"
                    >
                      <h1
                        class="emotion-14"
                        data-cvent-id="header-title"
                      >
                        Channels
                      </h1>
                    </section>
                  </div>
                </div>
                <section
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                    data-cvent-id="header-actions"
                  >
                    <button
                      class="emotion-17"
                      data-cvent-id="header-actions__create-channel"
                      type="button"
                    >
                      <span
                        class="emotion-18"
                      >
                        Create channel
                      </span>
                    </button>
                  </div>
                </section>
              </header>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Channel listing Render Create Channel Page and create channel, redirect to channel page 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  direction: ltr;
  background: rgb(255,255,255);
  padding: 24px;
  padding-bottom: 0;
  border-bottom: 1px solid rgb(217,220,222);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: 'Rubik','Helvetica','Arial';
  font-weight: 400;
}

.emotion-4 header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  width: 100%;
  margin: 16px 0 32px 0;
  position: relative;
}

@media (max-width: 560px) {
  .emotion-4 header {
    margin: 16px 0 0 0;
  }
}

.emotion-5 {
  background: transparent;
  color: rgb(26,32,38);
  font-size: 0.75rem;
  list-style-type: none;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  padding: 0;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  font-family: 'Rubik','Helvetica','Arial';
  color: rgb(0,106,225);
}

.emotion-7 {
  height: 16px;
  width: 16px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0.125rem;
  margin-right: 0.125rem;
}

.emotion-7 svg {
  fill: rgb(105,113,122);
}

.emotion-8 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-9 {
  border: 2px solid transparent;
  transition-property: border-color,text-decoration;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  margin: 0.125rem;
  display: inline-block;
  box-sizing: border-box;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}

.emotion-9:focus-within {
  border: 2px solid #4494EF;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 a:focus {
  outline: 0;
}

.emotion-9>* {
  vertical-align: baseline!important;
}

.emotion-10 a,
.emotion-10 a:link,
.emotion-10 a:visited {
  color: rgb(0,106,225);
  text-decoration-line: none;
}

.emotion-10 a:hover {
  color: #004CD6;
  text-decoration-line: underline;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (max-width: 560px) {
  .emotion-11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
  }
}

.emotion-12 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

@media (max-width: 560px) {
  .emotion-12 {
    margin: 16px 0 32px 0;
  }
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-all;
}

.emotion-14 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  margin: 0;
}

@media (max-width: 1080px) {
  .emotion-15 {
    position: absolute;
    top: -33px;
    right: 0;
  }
}

.emotion-16 {
  direction: ltr;
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  max-height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-16>*,
.emotion-16>button {
  margin: 0.5rem;
}

.emotion-17 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-17:hover {
    background-color: #004CD6;
  }
}

.emotion-17:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-17 svg {
  fill: rgb(255,255,255);
}

.emotion-18 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<body
  style=""
>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <section
              class="emotion-4"
            >
              <nav>
                <ol
                  class="emotion-5"
                  dir="ltr"
                >
                  <li
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-8"
                        focusable="false"
                        role="img"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <svg
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4l6 6c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4L10.4 12z"
                            />
                          </svg>
                        </g>
                      </svg>
                    </span>
                    <div
                      class="emotion-9"
                      title="UT hub with channels"
                    >
                      <div
                        class="emotion-10"
                      >
                        <a
                          href="/eventsplus/f31242af-65e1-4530-97d4-ba2c2adc0edb/information"
                        >
                          UT hub with channels
                        </a>
                      </div>
                    </div>
                  </li>
                </ol>
              </nav>
              <header>
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <section
                      class="emotion-13"
                    >
                      <h1
                        class="emotion-14"
                        data-cvent-id="header-title"
                      >
                        Channels
                      </h1>
                    </section>
                  </div>
                </div>
                <section
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                    data-cvent-id="header-actions"
                  >
                    <button
                      class="emotion-17"
                      data-cvent-id="header-actions__create-channel"
                      type="button"
                    >
                      <span
                        class="emotion-18"
                      >
                        Create channel
                      </span>
                    </button>
                  </div>
                </section>
              </header>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Channel listing Render Create Channel Page and open create channel form. 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  direction: ltr;
  background: rgb(255,255,255);
  padding: 24px;
  padding-bottom: 0;
  border-bottom: 1px solid rgb(217,220,222);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: 'Rubik','Helvetica','Arial';
  font-weight: 400;
}

.emotion-4 header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  width: 100%;
  margin: 16px 0 32px 0;
  position: relative;
}

@media (max-width: 560px) {
  .emotion-4 header {
    margin: 16px 0 0 0;
  }
}

.emotion-5 {
  background: transparent;
  color: rgb(26,32,38);
  font-size: 0.75rem;
  list-style-type: none;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  padding: 0;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  font-family: 'Rubik','Helvetica','Arial';
  color: rgb(0,106,225);
}

.emotion-7 {
  height: 16px;
  width: 16px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0.125rem;
  margin-right: 0.125rem;
}

.emotion-7 svg {
  fill: rgb(105,113,122);
}

.emotion-8 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-9 {
  border: 2px solid transparent;
  transition-property: border-color,text-decoration;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  margin: 0.125rem;
  display: inline-block;
  box-sizing: border-box;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}

.emotion-9:focus-within {
  border: 2px solid #4494EF;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 a:focus {
  outline: 0;
}

.emotion-9>* {
  vertical-align: baseline!important;
}

.emotion-10 a,
.emotion-10 a:link,
.emotion-10 a:visited {
  color: rgb(0,106,225);
  text-decoration-line: none;
}

.emotion-10 a:hover {
  color: #004CD6;
  text-decoration-line: underline;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (max-width: 560px) {
  .emotion-11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
  }
}

.emotion-12 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

@media (max-width: 560px) {
  .emotion-12 {
    margin: 16px 0 32px 0;
  }
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-all;
}

.emotion-14 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  margin: 0;
}

@media (max-width: 1080px) {
  .emotion-15 {
    position: absolute;
    top: -33px;
    right: 0;
  }
}

.emotion-16 {
  direction: ltr;
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  max-height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-16>*,
.emotion-16>button {
  margin: 0.5rem;
}

.emotion-17 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-17:hover {
    background-color: #004CD6;
  }
}

.emotion-17:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-17 svg {
  fill: rgb(255,255,255);
}

.emotion-18 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <section
              class="emotion-4"
            >
              <nav>
                <ol
                  class="emotion-5"
                  dir="ltr"
                >
                  <li
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-8"
                        focusable="false"
                        role="img"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <svg
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4l6 6c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4L10.4 12z"
                            />
                          </svg>
                        </g>
                      </svg>
                    </span>
                    <div
                      class="emotion-9"
                      title="UT hub with channels"
                    >
                      <div
                        class="emotion-10"
                      >
                        <a
                          href="/eventsplus/f31242af-65e1-4530-97d4-ba2c2adc0edb/information"
                        >
                          UT hub with channels
                        </a>
                      </div>
                    </div>
                  </li>
                </ol>
              </nav>
              <header>
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <section
                      class="emotion-13"
                    >
                      <h1
                        class="emotion-14"
                        data-cvent-id="header-title"
                      >
                        Channels
                      </h1>
                    </section>
                  </div>
                </div>
                <section
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                    data-cvent-id="header-actions"
                  >
                    <button
                      class="emotion-17"
                      data-cvent-id="header-actions__create-channel"
                      type="button"
                    >
                      <span
                        class="emotion-18"
                      >
                        Create channel
                      </span>
                    </button>
                  </div>
                </section>
              </header>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Channel listing Test Correct sort is passed and reorder button is rendered when channel ordering feature is on 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: inherit;
  max-width: inherit;
  height: 100%;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  max-width: 100vw;
  max-height: 100vh;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: visible;
  -webkit-transition: box-shadow .2s ease-in-out;
  transition: box-shadow .2s ease-in-out;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  direction: ltr;
  background: rgb(255,255,255);
  padding: 24px;
  padding-bottom: 0;
  border-bottom: 1px solid rgb(217,220,222);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: 'Rubik','Helvetica','Arial';
  font-weight: 400;
}

.emotion-4 header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  width: 100%;
  margin: 16px 0 32px 0;
  position: relative;
}

@media (max-width: 560px) {
  .emotion-4 header {
    margin: 16px 0 0 0;
  }
}

.emotion-5 {
  background: transparent;
  color: rgb(26,32,38);
  font-size: 0.75rem;
  list-style-type: none;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  padding: 0;
  width: 100%;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  font-family: 'Rubik','Helvetica','Arial';
  color: rgb(0,106,225);
}

.emotion-7 {
  height: 16px;
  width: 16px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0.125rem;
  margin-right: 0.125rem;
}

.emotion-7 svg {
  fill: rgb(105,113,122);
}

.emotion-8 {
  width: 1rem;
  height: 1rem;
  fill: currentColor;
}

.emotion-9 {
  border: 2px solid transparent;
  transition-property: border-color,text-decoration;
  transition-duration: 100ms;
  transition-timing-function: cubic-bezier(0.2, 0, 0.4, 0.9);
  margin: 0.125rem;
  display: inline-block;
  box-sizing: border-box;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}

.emotion-9:focus-within {
  border: 2px solid #4494EF;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 a:focus {
  outline: 0;
}

.emotion-9>* {
  vertical-align: baseline!important;
}

.emotion-10 a,
.emotion-10 a:link,
.emotion-10 a:visited {
  color: rgb(0,106,225);
  text-decoration-line: none;
}

.emotion-10 a:hover {
  color: #004CD6;
  text-decoration-line: underline;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (max-width: 560px) {
  .emotion-11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
  }
}

.emotion-12 {
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
}

@media (max-width: 560px) {
  .emotion-12 {
    margin: 16px 0 32px 0;
  }
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-all;
}

.emotion-14 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  margin: 0;
}

@media (max-width: 1080px) {
  .emotion-15 {
    position: absolute;
    top: -33px;
    right: 0;
  }
}

.emotion-16 {
  direction: ltr;
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  max-height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-16>*,
.emotion-16>button {
  margin: 0.5rem;
}

.emotion-17 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 96px;
}

@media (hover: hover) {
  .emotion-17:hover {
    background-color: #004CD6;
  }
}

.emotion-17:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-17 svg {
  fill: rgb(255,255,255);
}

.emotion-18 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <section
              class="emotion-4"
            >
              <nav>
                <ol
                  class="emotion-5"
                  dir="ltr"
                >
                  <li
                    class="emotion-6"
                  >
                    <span
                      class="emotion-7"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-8"
                        focusable="false"
                        role="img"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <svg
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4l6 6c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4L10.4 12z"
                            />
                          </svg>
                        </g>
                      </svg>
                    </span>
                    <div
                      class="emotion-9"
                      title="UT hub without channels"
                    >
                      <div
                        class="emotion-10"
                      >
                        <a
                          href="/eventsplus/f31242af-65e1-4530-97d4-ba2c2adc0edb/information"
                        >
                          UT hub without channels
                        </a>
                      </div>
                    </div>
                  </li>
                </ol>
              </nav>
              <header>
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <section
                      class="emotion-13"
                    >
                      <h1
                        class="emotion-14"
                        data-cvent-id="header-title"
                      >
                        Channels
                      </h1>
                    </section>
                  </div>
                </div>
                <section
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                    data-cvent-id="header-actions"
                  >
                    <button
                      class="emotion-17"
                      data-cvent-id="header-actions__create-channel"
                      type="button"
                    >
                      <span
                        class="emotion-18"
                      >
                        Create channel
                      </span>
                    </button>
                  </div>
                </section>
              </header>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
